reworked status Sandbox app now ready

--- a/Sandbox/src/CMakeLists.txt
+++ b/Sandbox/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 include_directories(${PROJECT_SOURCE_DIR}/Sandbox)
 # I assume you want to use LibProject as a library in MainProject.
-include_directories(${PROJECT_SOURCE_DIR}/Hazel)
+include_directories(${PROJECT_SOURCE_DIR}/Hazel/src/)
 link_directories(${PROJECT_SOURCE_DIR}/Hazel/src)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Sandbox/bin)
 
-add_executable(Application Application.cpp)
-target_link_libraries(Application HazelLib)
+add_executable(SandboxApp SandboxApp.cpp)
+target_link_libraries(SandboxApp HazelLib)
