--- a/Hazel/src/CMakeLists.txt
+++ b/Hazel/src/CMakeLists.txt
@@ -1,4 +1,1 @@
-# Notice name prefix of this variable, set by CMake according
-# to value given with "project()" in the root CMakeLists.txt.
-include_directories(${PROJECT_SOURCE_DIR}/Hazel)
-add_library(HazelLib Test.cpp)
+add_subdirectory(Hazel)
