installed and complied GLFW into prj

--- a/Hazel/src/Hazel/CMakeLists.txt
+++ b/Hazel/src/Hazel/CMakeLists.txt
@@ -1,4 +1,8 @@
 
-include_directories(${PROJECT_SOURCE_DIR}/Hazel/vendor/spdlog/include)
+include_directories(${PROJECT_SOURCE_DIR}/Hazel/vendor/spdlog/include
+                    ${PROJECT_SOURCE_DIR}/Hazel/vendor/GLFW/include
+                    ${PROJECT_SOURCE_DIR}/Hazel/src/Platform
+                    )
 
-add_library(HazelLib Application.cpp Log.cpp)
+add_library(HazelLib Application.cpp Log.cpp ../Platform/LinuxWindow.cpp)
+target_link_libraries(HazelLib glfw3.a dl pthread)
