--- a/Sandbox/src/CMakeLists.txt
+++ b/Sandbox/src/CMakeLists.txt
@@ -3,6 +3,8 @@ include_directories(${PROJECT_SOURCE_DIR}/Sandbox)
 message(${PROJECT_SOURCE_DIR}/Hazel/src)
 include_directories(${PROJECT_SOURCE_DIR}/Hazel/src)
 include_directories(${PROJECT_SOURCE_DIR}/Hazel/vendor/spdlog/include)
+include_directories(${PROJECT_SOURCE_DIR}/Hazel/vendor/GLFW/include)
+                    
 
 link_directories(${PROJECT_SOURCE_DIR}/Hazel/src)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Sandbox/bin)
