--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(Hazel VERSION 0.1.0)
+set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(Hazel)
 add_subdirectory(Sandbox)
